samples/_failures_safe/1761654581_3e9de9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de034891.c:151: error: expected ‘;’, ‘,’ or ‘)’ at end of input
